# ml_class_stroke

./: .gitignore  LICENSE  Makefile  README.md  Stroke_modelbasic_lakshmiV.1.ipynb  pyproject.toml  requirements.txt
.github/: pull_request_template.md
data/processed/: cleaned_stroke_data.csv
docs/: mkdocs.yml
docs/docs/: index.md
heart_stroke_prediction/: main.py  stroke_prediction_model.pkl
models/: logistic_regression_coefficients.csv  stroke_prediction_model.pkl
notebooks/: data_preprocessing.ipynb  processing_modeltesting.ipynb
